# rust-crud-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
.docker/: docker-compose.yml
migrations/2023-09-01-093323_cars/: down.sql  up.sql
src/: application_context.rs  error.rs  main.rs
src/configs/: cors.rs  database.rs  environment.rs  logger.rs  mod.rs  open_api.rs  telemetry.rs
src/controllers/: health_controller.rs  mod.rs  routes.rs
src/controllers/v1/: car_controller.rs  mod.rs
src/dto/: car.rs  mod.rs
src/entities/: schema.rs
src/handlers/: car.rs  health.rs  mod.rs
src/handlers/v1/: car.rs
src/models/: car.rs
src/repositories/: car.rs
src/services/: car.rs  mod.rs
src/utils/: constants.rs  error.rs
