[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
argon2 = "0.5.1"
chrono = { version = "0.4.19", features = ["serde"] }
postgres = "0.19.7"
serde = { version = "1.0.130", features = ["derive" ] }
serde_json = "1.0.68"
uuid = { version = "1.4.1", features = ["serde", "v4"] }