[package]
name = "rust-crud-api"
version = "0.1.0"
authors = ["Paulo Henrique <tezl38vwy@mozmail.com>"]
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }

# Actix
actix-cors = "0.6.4"
actix-web = "4.2.1"

# Postgres
bb8-postgres = "0.8.1"
tokio-postgres = { version = "0.7.8", features = [
    "with-uuid-1",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
postgres-types = "0.2.5"

# Open API (with utoipa)
utoipa = { version = "3.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }

# Serde
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

# Tracing
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["tonic"] }
tracing = "0.1.29"
tracing-opentelemetry = "0.21.0"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "registry",
] }

# Error Handling
thiserror = "1.0.44"

# Configuration
envy = "0.4.2"
dotenv = "0.15.0"

# Others
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.14"
reqwest = { version = "0.11.6", features = ["json"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
